align-center: fix

--- a/components/01-atoms/images/image/_image.scss
+++ b/components/01-atoms/images/image/_image.scss
@@ -21,6 +21,10 @@ picture {
   margin-left: 10px;
 }
 
+.align-center {
+  width: fit-content;
+}
+
 figure {
   margin: 0; /* override normalize */
 }
